--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -650,7 +650,8 @@ QPushButton:pressed {
 QPushButton:pressed {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #ffffff, stop: 1 #55ff00);
-}</string>
+}
+QToolTip { color: black; background-color: white; border: none; }</string>
     </property>
     <property name="text">
      <string/>
@@ -759,13 +760,11 @@ QPushButton:pressed {
 QPushButton:pressed {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #ffffff, stop: 1 #55ff00);
-}</string>
+}
+QToolTip { color: black; background-color: white; border: none; }</string>
     </property>
     <property name="text">
      <string>!</string>
-    </property>
-    <property name="shortcut">
-     <string>*</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pshbtnModulo">
@@ -790,20 +789,18 @@ QPushButton:pressed {
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-  background-color: rgb(215, 215, 215);
+  background-color: rgb(199, 222, 255);
   border: 1px solid gray;
   border-radius: 10px;
 }
 QPushButton:pressed {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #ffffff, stop: 1 #55ff00);
-}</string>
+}
+QToolTip { color: black; background-color: white; border: none; }</string>
     </property>
     <property name="text">
      <string>Mod</string>
-    </property>
-    <property name="shortcut">
-     <string>*</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pshbtnClear">
@@ -876,11 +873,17 @@ QPushButton:pressed {
    <widget class="QLabel" name="labOperator">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>20</x>
       <y>20</y>
-      <width>55</width>
+      <width>361</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
@@ -891,6 +894,9 @@ QPushButton:pressed {
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <zorder>pshbtn1</zorder>
